--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ body {
     --secondary-text-color: #5c5c62;
     --durability-text-color: #6a737d9c;
     --icon-color: #6a737d;
-    --border-color: #ff9a0045;
-    --text-decoration-color: #ff9a00;
+    --border-color: #006aff45;
+    --text-decoration-color: #4d92c6;
+    
+    background-color: rgba(148, 188, 218, 0.8);
 }
 
 .container {
@@ -40,7 +42,8 @@ body {
     border: 1px solid #f5f5f5;
     box-shadow: 1px 1px 7px 7px #f5f5f5;
     padding: 30px 0;
-    max-width: 900px;
+    max-width: 900px;    
+    background-color: rgba(203, 219, 232, 0.5);
 }
 
 .resume__block {
@@ -124,14 +127,6 @@ body {
     vertical-align: text-bottom;
 }
 
-.contact-info__avatar {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border: 3px solid;
-    border-color: var(--text-decoration-color);
-}
 
 /*Intro and skills styles*/
 .intro {
@@ -266,3 +261,21 @@ body {
 .additional-info__languages-item {
     color: var(--secondary-text-color);
 }
+
+/*new styles*/
+.contact-info__avatar {
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border: 3px solid;
+    border-color: var(--text-decoration-color);
+    scale: 1;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+    transition: scale 250ms ;
+}
+.contact-info__avatar:hover {
+    scale: 1.2;
+  }
